# NumericMethods

./: CMakeLists.txt  README.md
week01_tasks/: kahan.cpp  pairwise_sum.cpp  poly.cpp  statistics.cpp  statistics.hpp  utils.cpp  utils.hpp  vector_length.cpp
week03_tasks/: optimization.cpp  tank.cpp
week04_tasks/: equation_solving.cpp  global_optimization.cpp
week07_tasks/: integration.cpp
week15_tasks/: computational_geometry.cpp
